<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="80dp">

        <RadioGroup
            android:id="@+id/radioGroupShareMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textShareMode"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioUsingTeslaApi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usingTeslaApi" />

            <RadioButton
                android:id="@+id/radioUsingTeslaApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usingTeslaApp" />
        </RadioGroup>

        <Button
            android:id="@+id/btnSave"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:text="@string/save"
            app:icon="@drawable/ic_baseline_save_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnPaste"
            app:layout_constraintTop_toBottomOf="@+id/txtRefreshToken" />

        <Button
            android:id="@+id/btnPoiCacheClear"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="36dp"
            android:text="@string/clearAddressCache"
            app:icon="@drawable/ic_baseline_clear_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnTokenClear"
            app:layout_constraintTop_toBottomOf="@+id/vehicleSelector" />

        <Button
            android:id="@+id/btnPaste"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:text="@string/paste"
            app:icon="@drawable/ic_baseline_content_paste_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRefreshToken" />

        <Button
            android:id="@+id/btnTokenClear"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="36dp"

            android:text="@string/clearToken"
            app:icon="@drawable/ic_baseline_clear_24"
            app:layout_constraintEnd_toStartOf="@+id/btnPoiCacheClear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicleSelector" />

        <EditText
            android:id="@+id/txtRefreshToken"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/refreshToken"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:minHeight="48dp"
            android:minLines="1"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/defaultLabel"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupShareMode" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPoiCacheClear" />

        <Spinner
            android:id="@+id/vehicleSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@+id/defaultLabel3"
            app:layout_constraintTop_toBottomOf="@+id/txtAccessToken" />

        <TextView
            android:id="@+id/defaultLabel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:clickable="false"
            android:enabled="true"
            android:text="@string/vehicle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAccessToken" />

        <TextView
            android:id="@+id/txtAccessToken"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:maxLines="3"
            android:minLines="1"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/defaultLabel2"
            app:layout_constraintTop_toBottomOf="@+id/btnSave" />

        <TextView
            android:id="@+id/defaultLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:clickable="false"
            android:enabled="true"
            android:text="@string/accessToken"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSave" />

        <TextView
            android:id="@+id/defaultLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="18dp"
            android:clickable="false"
            android:enabled="true"
            android:text="@string/refreshToken"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupShareMode" />

        <TextView
            android:id="@+id/txtVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textVersion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="1.0" />

        <TextView
            android:id="@+id/textShareMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/shareMode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>